aTunes 2.1.0
------------
- New lyric engine: LyrDB (www.lyrdb.com)
- Use close buttons for playlists tabs when using Substance
- Allow creating patterns for tag edition by double-clicking on available patterns
- UI: Removed line border from titled borders

aTunes 2.0.1
-------------
- FIX: Some Substance L&F skins were not working
- FIX: Can't sort or shuffle a new created playlist
- FIX: Too many CRs in lyrics [2991316]
- FIX: Problems with accuracy of progress bar [2989229]
- FIX: Write repository after reading XML [2991957]
- FIX: Avoid progress bar move when time labels needs extra space
- FIX: Don't show "Buffering" message for downloaded podcast feed entries
- FIX: Shown wrong incomplete tags with System LAF [2992481]
- FIX: Some components where not updated when changing look and feel
- FIX: Application not able to play in Linux using a desktop different from Gnome or KDE [2995302]
- FIX: Preferences not saved if some requires restart [2999531]
- FIX: Avoid incomplete lyrics from some engines
- FIX: ID3v1.1 tags not read if not valid ID3v2.3 tag present (Jaudiotagger problem) [2997621]
- FIX: Import loved tracks from last.fm enabled even if last.fm disabled
- FIX: Load UNC resources from an M3U file [2988771]
- FIX: Interface freeze when caching files before play [2998158]
- FIX: Wrong foreground color in navigation table
- UI improvements in repository selection dialog


aTunes 2.0.0
-------------
- Support for libnotify (Gnome) (Patch by Marco Biscaro)
- File chooser in tag dialog should open in directory of the audio file (feature request [2786730])
- Three new look and feel skins (Dust, Dust Coffee and Twilight)
- Avoid child nodes in album tree view in navigator
- Use artist names comparator in device view
- New command to start CD ripper
- Start app and run commands if there is no more instances
- New extended tool tip used in all navigation views
- New options to execute commands before and after accessing repository